updated video entity, added tagAsIndexed endpoint
