# SwapVideos.API.Swagger/swagger.yml
@@ -53,6 +53,31 @@ paths:
             $ref: "#/definitions/Video"
         404:
           description: Video not found
+    put:
+      tags:
+        - "video"
+      summary: "Tag a video as indexed/not indexed"
+      description: "Tag a video as indexed/not indexed"
+      operationId: TagVideoAsIndexed
+      parameters:
+        - name: videoId
+          in: path
+          description: Video id
+          required: true
+          type: string
+          format: guid
+        - name: isIndexed
+          in: query
+          description: Bool to state whether the video is indexed or not
+          required: false
+          type: boolean
+      responses:
+        200:
+          description: Operation succeded
+          schema:
+            $ref: "#/definitions/Video"
+        404:
+          description: Video not found
 definitions: 
   Video:
     type: object
@@ -64,9 +89,15 @@ definitions:
       Name: 
         type: string
         description: Video name/title
+      Description:
+        type: string
+        description: Video description
       VideoLink:
         type: string
         description: Link to the video's blob storage
+      IsIndexed:
+        type: boolean
+        description: Modifier to show whether the video is indexed or not
   PaginatedVideosRequest:
     type: object
     properties: 
